dm/src/dmc/parser.h

extern linkage_t linkage;       /* current linkage that is in effect    */
extern int linkage_spec;        /* !=0 if active linkage specification  */
extern tym_t functypetab[LINK_MAXDIM];
#define FUNC_TYPE(l,m) functypetab[l]
extern tym_t functypetab[LINK_MAXDIM][MEMMODELS];
#define FUNC_TYPE(l,m) functypetab[l][m]
extern mangle_t funcmangletab[LINK_MAXDIM];
extern mangle_t varmangletab[LINK_MAXDIM];
void list_hydrate(list_t *plist, void (*hydptr)(void *));
void list_dehydrate(list_t *plist, void (*dehydptr)(void *));
/* Type matches */
#define TMATCHnomatch   0       /* no match                             */
#define TMATCHellipsis  0x01    /* match using ellipsis                 */
#define TMATCHuserdef   0x09    /* match using user-defined conversions */
#define TMATCHboolean   0x0E    // conversion of pointer or pointer-to-member to boolean
#define TMATCHstandard  0xFA    /* match with standard conversions      */
#define TMATCHpromotions 0xFC   /* match using promotions               */
#define TMATCHexact     0xFF    /* exact type match                     */
typedef unsigned char match_t;
struct Match
{
    match_t m;
    match_t m2;         // for user defined conversion, this is the second
                        // sequence match level (the second sequence is the
                        // one on the result of the user defined conversion)
    Symbol *s;          // user defined conversion function or constructor
    int ref;            // !=0 if reference binding
    tym_t toplevelcv;

    Match()
    {   m = 0;
        m2 = 0;
        s = NULL;
        ref = 0;
        toplevelcv = 0;
    }

    static int cmp(Match& m1, Match& m2);
};
/***************************
 * Type of destructor call
 */

#define DTORfree        1       // it is destructor's responsibility to
                                //   free the pointer
#define DTORvecdel      2       // delete array syntax
#define DTORmostderived 4       // destructor is invoked for most-derived
                                //  instance, not for a base class
#define DTORvector      8       // destructor has been invoked for an
                                //   array of instances of known size
#define DTORvirtual     0x10    // use virtual destructor, if any
#define DTORnoeh        0x20    // do not append eh stuff
#define DTORnoaccess    0x40    // do not perform access check
struct phstring_t
{
    phstring_t() { dim = 0; }

    size_t length() { return dim; }

    int cmp(phstring_t s2, int (*func)(void *,void *));

    bool empty() { return dim == 0; }

    char* operator[] (size_t index)
    {
        return dim == 1 ? (char *)data : data[index];
    }

    void push(const char *s);

    void hydrate();

    void dehydrate();

    int find(const char *s);

    void free(list_free_fp freeptr);

  private:
    size_t dim;
    char** data;
};
struct MACRO
{
#ifdef DEBUG
    unsigned short      id;
#define IDmacro 0x614D
#define macro_debug(m) assert((m)->id == IDmacro)
#else
#define macro_debug(m)
#endif

    char *Mtext;                // replacement text
    phstring_t Marglist;        // list of arguments (as char*'s)
    macro_t *ML,*MR;
#if TX86
    macro_t *Mnext;             // next macro in threaded list (all macros
                                // are on one list or another)
#endif
    unsigned char Mflags;
#define Mdefined        1       // if macro is defined
#define Mfixeddef       2       // if can't be re/un defined
#define Minuse          4       // if macro is currently being expanded
#define Mellipsis       0x8     // if arglist had trailing ...
#define Mnoparen        0x10    // if macro has no parentheses
#define Mkeyword        0x20    // this is a C/C++ keyword
#define Mconcat         0x40    // if macro uses concat operator
#define Mnotexp         0x80    // if macro should be expanded
    unsigned char Mval;         // if Mkeyword, this is the TKval
#if TX86
    char Mid[1];                // macro identifier
#else
    str4 Mid[];                 /* macro identifier as a 4 byte string */
#endif
};
/**********************
 * Flags for #include files.
 */

#define FQcwd           1       // search current working directory
#define FQpath          2       // search INCLUDE path
#define FQsystem        4       // this is a system include
#define FQtop           8       // top level file, already open
#define FQqual          0x10    // filename is already qualified
#define FQnext          0x20    // search starts after directory
                                // of last included file (for #include_next)

/***************************************************************************
 * Which block is active is maintained by the blklst, which is a backwardly
 * linked list of which blocks are active.
 */

struct blklst
{
    /* unsigned because of the chars with the 8th bit set       */
    unsigned char  *BLtextp;    /* current position in text buffer      */
    unsigned char  *BLtext;     /* start of text buffer                 */
    blklst         *BLprev;     // enclosing blklst
    unsigned char   BLflags;    /* input block list flags               */
#       define BLspace   0x01   /* we've put out an extra space         */
#       define BLexpanded 0x40  // already macro expanded; don't do it again
#       define BLtokens  0x10   // saw tokens in input
#       define BLsystem  0x04   // it's a system #include (and it must be 4)
    char        BLtyp;          /* type of block (BLxxxx)               */
#       define BLstr    2       /* string                               */
#       define BLfile   3       /* a #include file                      */
#       define BLarg    4       /* macro argument                       */
#       define BLrtext  5       // random text

#if IMPLIED_PRAGMA_ONCE
#       define BLnew     0x02   // start of new file
#       define BLifndef  0x20   // found #ifndef/#define at start
#       define BLendif   0x08   // found matching #endif
    unsigned ifnidx;            // index into ifn[] of IF_FIRSTIF
#endif

    list_t      BLaargs;        /* actual arguments                     */
    list_t      BLeargs;        /* actual arguments                     */
    int         BLnargs;        /* number of dummy args                 */
    int         BLtextmax;      /* size of text buffer                  */
    unsigned char *BLbuf;       // BLfile: file buffer
    unsigned char *BLbufp;      // BLfile: next position in file buffer
#if IMPLIED_PRAGMA_ONCE
    char        *BLinc_once_id; // macro identifier for #include guard
#endif
    Srcpos      BLsrcpos;       /* BLfile, position in that file        */
    int         BLsearchpath;   // BLfile: remaining search path for #include_next

    void print();
};
struct BlklstSave
{
    blklst *BSbl;
    unsigned char *BSbtextp;
    unsigned char BSxc;
};
extern int TokenCnt;
/* Get filename for BLfile block        */
#define blklst_filename(b)      (srcpos_name((b)->BLsrcpos))
/* Different types of special values that can occur in the character stream */
#define PRE_ARG 0xFF    // the next char following is a parameter number
                        // If next char is PRE_ARG, then PRE_ARG is the char
#define PRE_BRK 0xFE    // token separator
#define PRE_STR 0xFA    // If immediately following PRE_ARG, then the
                        // parameter is to be 'stringized'
#define PRE_EXP 0xFC    // following identifier may not be expanded as a macro
#define PRE_CAT 0xFB    // concatenate tokens
#define PRE_EOB 0       // end of block
#define PRE_EOF 0       // end of file
#define PRE_SPACE  0xFD // token separator
#define PRE_ARGMAX 0xFB // maximum number of arguments to a macro
#define EGCHAR()                                                \
        ((((xc = *btextp) != PRE_EOB && xc != PRE_ARG)  \
        ?   (btextp++,(config.flags2 & CFG2expand && (explist(xc),1)),1) \
        :   egchar2()                                           \
        ),xc)
#define EGCHAR() egchar()
/**********************************
 * Function return value methods.
 */

#define RET_REGS        1       /* returned in registers                */
#define RET_STACK       2       /* returned on stack                    */
#define RET_STATIC      4       /* returned in static memory location   */
#define RET_NDPREG      8       /* returned in floating point register  */
#define RET_PSTACK      2       // returned on stack (DOS pascal style)
/* from blklst.c */
extern blklst *bl;
extern unsigned char *btextp;
extern int blklst_deferfree;
extern char *eline;
extern int elinmax;             /* # of chars in buffer eline[]         */
extern int elini;               /* index into eline[]                   */
extern int elinnum;             /* expanded line number                 */
extern int expflag;            /* != 0 means not expanding list file   */
blklst *blklst_getfileblock(void);
void putback(int);
unsigned char *macro_replacement_text(macro_t *m, phstring_t args);
unsigned char *macro_rescan(macro_t *m, unsigned char *text);
unsigned char *macro_expand(unsigned char *text);
extern void explist(int);
void expstring(const char *);
void expinsert(int);
void expbackup(void);
/***************************************
 * Erase the current line of expanded output.
 */

inline void experaseline()
{
    // Remove the #pragma once from the expanded listing
    if (config.flags2 & CFG2expand && expflag == 0)
    {   elini = 0;
        eline[0] = 0;
    }
}
void wrtexp(FILE *);
extern unsigned egchar2(void);
extern unsigned egchar(void);
void insblk(unsigned char *text,int typ,list_t aargs,int nargs,macro_t *m);
void insblk2(unsigned char *text,int typ);
unsigned getreallinnum();
extern void getcharnum(void);
unsigned blklst_linnum(void);
void blklst_term();
/* adl.c */
symbol *adl_lookup(char *id, symbol *so, list_t arglist);
/* exp.c */
extern elem *exp_sizeof(int);
/* exp2.c */
extern elem *typechk(elem *,type *),
        *exp2_cast(elem *,type *),
        *cast(elem *,type *),
        *doarray(elem *),
        *doarrow(elem *),
        *xfunccall(elem *efunc,elem *ethis,list_t pvirtbase,list_t arglist),
        *exp2_gethidden(elem *e),
        *dodotstar(elem *, elem *),
        *reftostar(elem *),
        *reftostart(elem *,type *),
        *exp2_copytotemp(elem *),
        *dofunc(elem *),
        *builtinFunc(elem *),
        *arraytoptr(elem *),
        *convertchk(elem *),
        *lptrtooffset(elem *),
        *dodot(elem *,type *,bool bColcol),
        *minscale(elem *);
elem *exp2_addr(elem *);
void getarglist(list_t *);
elem *exp2_ptrvbaseclass(elem *ethis,Classsym *stag,Classsym *sbase);
int t1isbaseoft2(type *,type *);
int c1isbaseofc2(elem **,symbol *,symbol *);
int c1dominatesc2(symbol *stag, symbol *c1, symbol *c2);
int exp2_retmethod(type *);
type *exp2_hiddentype(type *);
int typecompat(type *,type *);
int t1isSameOrSubsett2(type *,type *);
void handleaccess(elem *);
void chkarithmetic(elem *);
void chkintegral(elem *);
void scale(elem *);
void impcnv(elem *);
void exp2_ptrtocomtype(elem *);
int  exp2_ptrconv(type *,type *);
void getinc(elem *);
int paramlstmatch(param_t *,param_t *);
int template_paramlstmatch(type *, type *);
/* from file.c */
extern char ext_obj[];
extern char ext_i[];
extern char ext_dep[];
extern char ext_lst[];
extern char ext_hpp[];
extern char ext_c[];
extern char ext_cpp[];
extern char ext_sym[];
extern char ext_tdb[];
extern char ext_dmodule[];
extern int includenest;
/* msc.c */
void list_hydrate(list_t *plist, void (*hydptr)(void *));
void list_dehydrate(list_t *plist, void (*dehydptr)(void *));
extern int xc;                /* character last read                  */
extern int level;               // declaration level