dm/src/dmc/parser.d

/**
 * Implementation of the
 * $(LINK2 http://www.digitalmars.com/download/freecompiler.html, Digital Mars C/C++ Compiler).
 *
 * Copyright:   Copyright (c) 1989-1998 by Symantec, All Rights Reserved
 *              Copyright (c) 2000-2017 by Digital Mars, All Rights Reserved
 * Authors:     $(LINK2 http://www.digitalmars.com, Walter Bright)
 * License:     Distributed under the Boost Software License, Version 1.0.
 *              http://www.boost.org/LICENSE_1_0.txt
 * Source:      https://github.com/DigitalMars/Compiler/blob/master/dm/src/dmc/parser.d
 */

/* Definitions only used by the parser                  */

module parser;

import core.stdc.stdio;

import phstring;
import scopeh;

import dmd.backend.cdef;
import dmd.backend.cc;
import dmd.backend.el;
import dmd.backend.outbuf : Outbuffer;
import dmd.backend.ty;
import dmd.backend.type;

import dmd.backend.dlist;

extern (C++):

version (MARS)
{
}
else
{
    extern __gshared linkage_t linkage;       // current linkage that is in effect
    extern __gshared int linkage_spec;        // !=0 if active linkage specification

    static if (MEMMODELS == 1)
    {
        extern __gshared tym_t[LINK_MAXDIM] functypetab;
        tym_t FUNC_TYPE(int l, int m) { return functypetab[l]; }
    }
    else
    {
        extern __gshared tym_t[MEMMODELS][LINK_MAXDIM] functypetab;
        tym_t FUNC_TYPE(int l, int m) { return functypetab[l][m]; }
    }

    extern __gshared mangle_t[LINK_MAXDIM] funcmangletab;
    extern __gshared mangle_t[LINK_MAXDIM] varmangletab;
}


/* Type matches */
enum
{
    TMATCHnomatch    = 0,       // no match
    TMATCHellipsis   = 0x01,    // match using ellipsis
    TMATCHuserdef    = 0x09,    // match using user-defined conversions
    TMATCHboolean    = 0x0E,    // conversion of pointer or pointer-to-member to boolean
    TMATCHstandard   = 0xFA,    // match with standard conversions
    TMATCHpromotions = 0xFC,    // match using promotions
    TMATCHexact      = 0xFF,    // exact type match
}

alias match_t = ubyte;

struct Match
{
    match_t m;
    match_t m2;         // for user defined conversion, this is the second
                        // sequence match level (the second sequence is the
                        // one on the result of the user defined conversion)
    Symbol *s;          // user defined conversion function or constructor
    int _ref;           // !=0 if reference binding
    tym_t toplevelcv;

    static int cmp(ref Match m1, ref Match m2)
    {
        return Match__cmp(m1, m2);
    }
}

int Match__cmp(ref Match m1, ref Match m2);

/***************************
 * Type of destructor call
 */

enum
{
    DTORfree        = 1,       // it is destructor's responsibility to
                               //   free the pointer
    DTORvecdel      = 2,       // delete array syntax
    DTORmostderived = 4,       // destructor is invoked for most-derived
                               //  instance, not for a base class
    DTORvector      = 8,       // destructor has been invoked for an
                               //   array of instances of known size
    DTORvirtual     = 0x10,    // use virtual destructor, if any
    DTORnoeh        = 0x20,    // do not append eh stuff
    DTORnoaccess    = 0x40,    // do not perform access check
}



/***************************
 * Macros.
 */

alias mflags_t = ubyte;
enum
{
    Mdefined        = 1,       // if macro is defined
    Mfixeddef       = 2,       // if can't be re/un defined
    Minuse          = 4,       // if macro is currently being expanded
    Mellipsis       = 0x8,     // if arglist had trailing ...
    Mnoparen        = 0x10,    // if macro has no parentheses
    Mkeyword        = 0x20,    // this is a C/C++ keyword
    Mconcat         = 0x40,    // if macro uses concat operator
    Mnotexp         = 0x80,    // if macro should be expanded
}

alias macro_t = MACRO;
struct MACRO
{
    debug ushort id;
    enum IDmacro = 0x614D;

    char* Mtext;                // replacement text
    phstring_t Marglist;        // list of arguments (as char*'s)
    macro_t* ML,MR;
    macro_t* Mnext;             // next macro in threaded list (all macros
                                // are on one list or another)
    mflags_t Mflags;
    ubyte Mval;                 // if Mkeyword, this is the TKval
    char[1] Mid;                // macro identifier
}

debug
{
    void macro_debug(MACRO* m) { assert(m.id == MACRO.IDmacro); }
}
else
{
    void macro_debug(MACRO* m) { }
}

/**********************
 * Flags for #include files.
 */

enum
{
    FQcwd           = 1,       // search current working directory
    FQpath          = 2,       // search INCLUDE path
    FQsystem        = 4,       // this is a system include
    FQtop           = 8,       // top level file, already open
    FQqual          = 0x10,    // filename is already qualified
    FQnext          = 0x20,    // search starts after directory
                               // of last included file (for #include_next)
}

/***************************************************************************
 * Which block is active is maintained by the blklst, which is a backwardly
 * linked list of which blocks are active.
 */

alias blflags_t = ubyte;
enum
{
    BLspace    = 0x01,   // we've put out an extra space
    BLexpanded = 0x40,   // already macro expanded; don't do it again
    BLtokens   = 0x10,   // saw tokens in input
    BLsystem   = 0x04,   // it's a system #include (and it must be 4)
}

alias bltyp_t = ubyte;
enum
{
    BLstr    = 2,       // string
    BLfile   = 3,       // a #include file
    BLarg    = 4,       // macro argument
    BLrtext  = 5,       // random text

    // if IMPLIED_PRAGMA_ONCE
    BLnew    = 0x02,   // start of new file
    BLifndef = 0x20,   // found #ifndef/#define at start
    BLendif  = 0x08,   // found matching #endif
}

struct blklst
{
    // unsigned because of the chars with the 8th bit set
    char           *BLtextp;    // current position in text buffer
    char           *BLtext;     // start of text buffer
    blklst         *BLprev;     // enclosing blklst
    blflags_t       BLflags;    // input block list flags
    bltyp_t         BLtyp;      // type of block (BLxxxx)

static if (IMPLIED_PRAGMA_ONCE)
{
    uint ifnidx;                // index into ifn[] of IF_FIRSTIF
}

    list_t      BLaargs;        /* actual arguments                     */
    list_t      BLeargs;        /* actual arguments                     */
    int         BLnargs;        /* number of dummy args                 */
    int         BLtextmax;      /* size of text buffer                  */
    char       *BLbuf;          // BLfile: file buffer
    char       *BLbufp;         // BLfile: next position in file buffer
static if (IMPLIED_PRAGMA_ONCE)
{
    char        *BLinc_once_id; // macro identifier for #include guard
}
    Srcpos      BLsrcpos;       /* BLfile, position in that file        */
    int         BLsearchpath;   // BLfile: remaining search path for #include_next

    void print();
}

struct BlklstSave
{
    blklst *BSbl;
    ubyte *BSbtextp;
    ubyte BSxc;
}

static if (IMPLIED_PRAGMA_ONCE)
{
    extern __gshared int TokenCnt;
}

// Get filename for BLfile block
char* blklst_filename(blklst* b) { return srcpos_name(b.BLsrcpos); }

/* Different types of special values that can occur in the character stream */
enum
{
    PRE_ARG    = 0xFF,  // the next char following is a parameter number
                        // If next char is PRE_ARG, then PRE_ARG is the char
    PRE_BRK    = 0xFE,  // token separator
    PRE_STR    = 0xFA,  // If immediately following PRE_ARG, then the
                        // parameter is to be 'stringized'
    PRE_EXP    = 0xFC,  // following identifier may not be expanded as a macro
    PRE_CAT    = 0xFB,  // concatenate tokens
    PRE_EOB    = 0,     // end of block
    PRE_EOF    = 0,     // end of file
    PRE_SPACE  = 0xFD,  // token separator

    PRE_ARGMAX = 0xFB // maximum number of arguments to a macro
}

static if (1)
{
    int EGCHAR()
    {
        xc = *btextp;
        if (xc != PRE_EOB && xc != PRE_ARG)
        {
            btextp++;
            if (config.flags2 & CFG2expand)
                explist(xc);
        }
        else
            egchar2();
        return xc;
    }
}
else
{
    alias EGCHAR = egchar;
}

/**********************************
 * Function return value methods.
 */

enum
{
    RET_REGS        = 1,       // returned in registers
    RET_STACK       = 2,       // returned on stack
    RET_STATIC      = 4,       // returned in static memory location
    RET_NDPREG      = 8,       // returned in floating point register
    RET_PSTACK      = 2,       // returned on stack (DOS pascal style)
}

/* from blklst.c */
extern __gshared blklst *bl;
extern __gshared ubyte *btextp;
extern __gshared int blklst_deferfree;
extern __gshared char *eline;
extern __gshared int elinmax;            // # of chars in buffer eline[]
extern __gshared int elini;              // index into eline[]
extern __gshared int elinnum;            // expanded line number
extern __gshared int expflag;            // != 0 means not expanding list file
blklst *blklst_getfileblock();
void putback(int);

ubyte *macro_replacement_text(macro_t *m, phstring_t args);
ubyte *macro_rescan(macro_t *m, ubyte *text);
char *macro_expand(char *text);

void explist(int);
void expstring(const(char)* );
void expinsert(int);
void expbackup();

/***************************************
 * Erase the current line of expanded output.
 */

void experaseline()
{
    // Remove the #pragma once from the expanded listing
    if (config.flags2 & CFG2expand && expflag == 0)
    {   elini = 0;
        eline[0] = 0;
    }
}

extern (C) void wrtexp(FILE *);
uint egchar2();
uint egchar();

void insblk(ubyte *text,int typ,list_t aargs,int nargs,macro_t *m);
void insblk2(ubyte *text,int typ);

version (__GNUC__)
{
    uint getreallinnum();
    void getcharnum();
}

uint blklst_linnum();
void blklst_term();

/* adl.c */
Symbol *adl_lookup(char *id, Symbol *so, list_t arglist);

/* exp.c */
elem *exp_sizeof(int);

/* exp2.c */
elem *typechk(elem *,type *);
elem *exp2_cast(elem *,type *);
elem *_cast(elem *,type *);
elem *doarray(elem *);
elem *doarrow(elem *);
elem *xfunccall(elem *efunc,elem *ethis,list_t pvirtbase,list_t arglist);
elem *exp2_gethidden(elem *e);
elem *dodotstar(elem *, elem *);
elem *reftostar(elem *);
elem *reftostart(elem *,type *);
//elem *exp2_copytotemp(elem *);
elem *dofunc(elem *);
elem *builtinFunc(elem *);
elem *arraytoptr(elem *);
elem *convertchk(elem *);
elem *lptrtooffset(elem *);
elem *dodot(elem *,type *,bool bColcol);
elem *minscale(elem *);
elem *exp2_addr(elem *);
void getarglist(list_t *);
elem *exp2_ptrvbaseclass(elem *ethis,Classsym *stag,Classsym *sbase);
int t1isbaseoft2(type *,type *);
int c1isbaseofc2(elem **,Symbol *,Symbol *);
int c1dominatesc2(Symbol *stag, Symbol *c1, Symbol *c2);
int exp2_retmethod(type *);
type *exp2_hiddentype(type *);
int typecompat(type *,type *);
int t1isSameOrSubsett2(type *,type *);
void handleaccess(elem *);
void chkarithmetic(elem *);
void chkintegral(elem *);
void scale(elem *);
void impcnv(elem *);
void exp2_ptrtocomtype(elem *);
int  exp2_ptrconv(type *,type *);
void getinc(elem *);
int paramlstmatch(param_t *,param_t *);
int template_paramlstmatch(type *, type *);

/* from file.c */
extern (C)
{
extern __gshared char[5] ext_obj; // or [3] for ".o"
extern __gshared char[3] ext_i;
extern __gshared char[5] ext_dep;
extern __gshared char[5] ext_lst;
extern __gshared char[5] ext_hpp;
extern __gshared char[3] ext_c;
extern __gshared char[5] ext_cpp;
extern __gshared char[5] ext_sym;
extern __gshared char[5] ext_tdb;
}

// htod
extern (C) extern __gshared char[] ext_dmodule;
extern __gshared int includenest;
